tests/expectations/compiler/finalize/finalize_fail.out
Error [EAST0372017]: The name `finalize_no_params` is defined multiple times.
    --> compiler-test:26:20
     |
  22 |       async transition finalize_no_params() -> Future {
     |                        ^^^^^^^^^^^^^^^^^^ previous definition of `finalize_no_params` here
   ...
  26 |       async function finalize_no_params() {
     |                      ^^^^^^^^^^^^^^^^^^ `finalize_no_params` redefined here
